tests/neg/poly-fun.stk
fun foo[T <: {a: Int}](x: T): T = x.a  // error

fun bar[T](x: T): T = 3 // error

// TODO: type inference of result type discard errors
fun main: Void =
  val a = foo 10  // error

  foo {a = 20}

  val b = foo[{b: Int}] {b = 10} // error
